--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@fontsource/inter": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.1.3",
+    "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
