--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.3",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
