--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.3",
+    "@mui/x-data-grid": "^7.22.3",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "chroma-js": "^3.1.2",
+    "dayjs": "^1.11.13",
     "ldrs": "^1.0.2",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
