Feat: added decomposition stl plots.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "chroma-js": "^3.1.2",
     "dayjs": "^1.11.13",
     "ldrs": "^1.0.2",
+    "motion": "^11.11.17",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
